# noisc

./: .gitignore  .prettierrc  Cargo.toml  README.md  biome.json  build-std-index.ts  ideas.md  jest.config.ts  node-import-transform.ts  nois.bnf  nois.def  package.json  tsconfig.json  tsconfig.lib.json
.github/workflows/: main.yml
data/: 2x2x2_solver.no  adding_lists.no  basic.no  casts.no  closure.no  cmd_args.no  early_return.no  example.no  features.no  fib.no  fizz_buzz.no  fn_return.no  hello.no  higher_order_function.no  map-iter.no  panic.no  quine.no  rule_110.no  sample.no  syntax.no  test.no
example/: example.no  hello.no  rule110.no
src/: ast.rs  cli.rs  cli.ts  config.ts  e2e.spec.ts  error.rs  error.ts  grammar.bnf  grammar.json  grammar.pest  grammar.ts  index.spec.ts  index.ts  lib.ts  location.spec.ts  location.ts  logger.rs  main.rs  output.ts  parser.rs  result.ts  source.ts  std-index.d.ts  std-index.ts  util.rs
src/ast/: ast.rs  ast.spec.ts  ast.ts  ast_context.rs  ast_pair.rs  ast_parser.rs  binary_operator.rs  block.rs  destructure.rs  expr.ts  expression.rs  function_call.rs  function_init.rs  identifier.rs  index.spec.ts  index.ts  match.ts  matcher.rs  mod.rs  op.ts  operand.rs  operand.ts  operator.rs  statement.rs  statement.ts  type-def.ts  type.ts  unary_operator.rs  util.rs  value_type.rs
src/codegen/: declaration.ts
src/interpret/: context.rs  definition.rs  destructure.rs  evaluate.rs  function_call.rs  interpreter.rs  matcher.rs  mod.rs  value.rs
src/lexer/: lexer.spec.ts  lexer.ts
src/package/: build.ts  emit.ts  index.ts  (+1 more)
(+124 files in other folders)
