[package]
name = "nois"
version = "0.1.0"
edition = "2021"
description = "Dynamically typed interpreted programming language with Rust runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nois-lang/nois"
homepage = "https://github.com/nois-lang/nois"
keywords = ["language", "programming-language", "rust"]
build = "build.rs"

[build-dependencies]
built = "0.5.2"

[dependencies]
log = "0.4.17"
regex = "1.7.0"
pest = "2.5.1"
pest_derive = "2.5.1"
colored = "2.0.0"
enquote = "1.1.0"
clap = { version = "3.2.23", features = ["derive"] }
shellexpand = "3.0.0"
fs_extra = "1.2.0"
atty = "0.2.14"
num = "0.4.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
linefeed = "0.6.0"
